--- a/backend-app/Dockerfile
+++ b/backend-app/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:latest
 WORKDIR /app
-COPY backend-app/package*.json /app
+COPY package*.json /app
 RUN npm install
-COPY  backend-app /app
+COPY  . /app
 EXPOSE 3000
 ENV PORT=3000
 CMD [ "node", "/app/index.js" ]
