added manifest files

--- a/cd-playbook.yaml
+++ b/cd-playbook.yaml
@@ -1,11 +1,13 @@
 ---
-- host: ansible
+- hosts: ansible
   connection: local
   vars:
     ansible_python_interpreter: /usr/bin/python3
   tasks:
   - name: Start kubernetes
     command: minikube start
+  - name: Start kubernetes tunnel
+    command: minikube tunnel
   - name: Create a deployment
     command: minikube kubectl -- apply -f /opt/docker/jenkins-kubernetes-pipeline/myapp.yaml
   - name: Wait for deployment creation
