--- a/myapp.yaml
+++ b/myapp.yaml
@@ -30,7 +30,7 @@ metadata:
 spec:
   selector:
     app: myapp
-  type: LoadBalancer
+  type: NodePort
   ports:
     - protocol: TCP
       port: 3000
